--- a/notebooks/gene_mod_example_R.ipynb
+++ b/notebooks/gene_mod_example_R.ipynb
@@ -18,9 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -66,15 +64,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Load the metadata for all CMap signatures"
+    "## Slicing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Load the metadata for all CMap signatures. We're doing this because we don't want to load all signatures at once. The matrix is too large. So instead, we'll figure out the specific set of signatures beforehand and then extract only those."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -158,9 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "sigs_of_interest <- siginfo[pert_type==\"trt_cp\" &\n",
@@ -179,9 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -216,9 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -245,9 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -279,15 +274,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Note that the matrix only has one row, because we only requested data for a single gene."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "We're interested in the data matrix, located in the slot `@mat`. Let's look at the distribution of z-scores. We'll add some vertical lines to indicate the thresholds for modulation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Analysis"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -334,9 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -371,9 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -403,15 +406,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Good, this is roughly and equal number. Slice out the signatures from the matrix, restricting to landmark space"
+    "Good, this is roughly an equal number. Slice out the signatures from the matrix, restricting to landmark space"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -438,9 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "corr <- cor(ds2@mat, method=\"spearman\")"
@@ -461,7 +460,7 @@
    },
    "outputs": [],
    "source": [
-    "mod_df <- data.frame(mod=ds@mat[, c(mod_idx, non_mod_idx)])\n",
+    "mod_df <- data.frame(zscore=ds@mat[, c(mod_idx, non_mod_idx)])\n",
     "rownames(mod_df) <- c(names(mod_idx), names(non_mod_idx))"
    ]
   },
@@ -475,9 +474,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
