--- a/notebooks/gene_mod_example_R.ipynb
+++ b/notebooks/gene_mod_example_R.ipynb
@@ -18,7 +18,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -37,7 +39,7 @@
     "library(data.table)\n",
     "\n",
     "# load pheatmap for plotting heatmaps\n",
-    "suppressWarnings(library(pheatmap))"
+    "library(pheatmap)"
    ]
   },
   {
@@ -55,9 +57,10 @@
    },
    "outputs": [],
    "source": [
-    "ds_path <- \"/cmap/projects/M1/DATASETS/GEO/matrices/GSE92742_Broad_LINCS_Level5_COMPZ.MODZ_n473647x12328.gctx\"\n",
-    "siginfo_path <- \"/cmap/projects/M1/DATASETS/GEO/metadata/siginfo_combined.txt\"\n",
-    "geneinfo_path <- \"/cmap/projects/M1/DATASETS/GEO/metadata/GSE92742_Broad_LINCS_gene_info.txt\""
+    "ds_path <- \"/srv/data/cmap/GSE92742_Broad_LINCS_Level5_COMPZ.MODZ_n473647x12328.gctx\"\n",
+    "siginfo_path <- \"/srv/data/cmap/GSE92742_Broad_LINCS_sig_info.txt\"\n",
+    "sig_metrics_path <- \"/srv/data/cmap/GSE92742_Broad_LINCS_sig_metrics.txt\"\n",
+    "geneinfo_path <- \"/srv/data/cmap/GSE92742_Broad_LINCS_gene_info.txt\""
    ]
   },
   {
@@ -71,13 +74,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Load the metadata for all CMap signatures. We're doing this because we don't want to load all signatures at once. The matrix is too large. So instead, we'll figure out the specific set of signatures beforehand and then extract only those."
+    "Load the metadata for all CMap signatures. We're doing this because we don't want to load all signatures at once. The matrix is too large. So instead, we'll figure out the specific set of signatures beforehand and then extract only those. To do this we need both the sig_info and sig_metrics files."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -93,7 +98,22 @@
     "# suppressing warnings so that we don't have to see\n",
     "# fread complain about inconsistencies in some of the\n",
     "# metadata columns\n",
-    "siginfo <- suppressWarnings(data.table::fread(siginfo_path))"
+    "siginfo <- suppressWarnings(data.table::fread(siginfo_path))\n",
+    "sigmetrics <- suppressWarnings(data.table::fread(sig_metrics_path))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# we'll want to add the cell_id column to the sig_metrics object,\n",
+    "# making sure it's in the right order\n",
+    "index <- match(sigmetrics$sig_id, siginfo$sig_id)\n",
+    "sigmetrics$cell_id <- siginfo$cell_id[index]"
    ]
   },
   {
@@ -137,7 +157,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Look up the corresponding gene_id, since this will correspond to row ids in the data matrix"
+    "Look up the corresponding gene_id, since this will correspond to row ids in the data matrix."
    ]
   },
   {
@@ -161,7 +181,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sigs_of_interest <- siginfo[pert_type==\"trt_cp\" &\n",
@@ -180,7 +202,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -215,7 +239,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -236,13 +262,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's take a look at the structure of the object we can do this by simply typing its name"
+    "Let's take a look at the structure of the object we can do this by simply typing its name."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -281,20 +309,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We're interested in the data matrix, located in the slot `@mat`. Let's look at the distribution of z-scores. We'll add some vertical lines to indicate the thresholds for modulation."
+    "## Analysis"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Analysis"
+    "We're interested in the data matrix, located in the slot `@mat`. Let's look at the distribution of z-scores. We'll add some vertical lines to indicate the thresholds for modulation."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -341,7 +371,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -376,7 +408,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -406,13 +440,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Good, this is roughly an equal number. Slice out the signatures from the matrix, restricting to landmark space"
+    "Good, this is roughly an equal number. Slice out the signatures from the matrix, restricting to landmark space (i.e. directly measured genes only)."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -433,13 +469,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Compute all pairwise correlations between signatures"
+    "Compute all pairwise correlations between signatures."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "corr <- cor(ds2@mat, method=\"spearman\")"
@@ -449,7 +487,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Cluster the correlations, overlaying a color bar indicating the degree of modulation of our gene of interest"
+    "Cluster the correlations, overlaying a color bar indicating the degree of modulation of our gene of interest."
    ]
   },
   {
@@ -468,13 +506,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Plot as a heatmap using the `pheatmap` package"
+    "Plot as a heatmap using the `pheatmap` package."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -498,7 +538,7 @@
     "collapsed": true
    },
    "source": [
-    "Seems like we do see ~2 clusters which roughly correspond to the signatures in wich our gene is modulated. Not perfect but definitely a trend."
+    "Seems like we do see ~2 clusters which roughly correspond to the signatures in which our gene is modulated, as indicated by the color bar on the margins. Not perfect but definitely a trend."
    ]
   },
   {
